--- a/package.json
+++ b/package.json
@@ -5,26 +5,41 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "axios-cancel": "^0.2.2",
+    "axios-observable": "^1.1.3",
     "core-js": "^2.6.5",
+    "express": "^4.17.1",
+    "oboe": "^2.1.5",
+    "rxjs": "^6.6.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "latest",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vue-rx": "^6.2.0",
+    "vuex": "^3.0.1",
+    "register-service-worker": "^1.7.1"
   },
   "devDependencies": {
+    "@babel/register": "^7.9.0",
+    "@types/jest": "^25.2.3",
     "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.5",
+    "@vue/cli-plugin-e2e-nightwatch": "^4.4.1",
     "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-plugin-unit-mocha": "^3.0.5",
+    "@vue/cli-plugin-unit-jest": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "chai": "^4.1.2",
+    "babel-jest": "^23.6.0",
+    "chromedriver": "^81.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
